--- a/templates/base.html
+++ b/templates/base.html
@@ -315,7 +315,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="{% if a == 'tasks' %}active{% endif %}">
+                            <li class="{% if a == 'recruitments' or a == 'tasks' or a == 'complaints' %}active{% endif %}">
                                 <a href="javascript:void(0);" class="menu-toggle">
                                     <i class="material-icons">local_hospital</i>
                                     <span>Others</span>
