--- a/templates/operations/other-ops.html
+++ b/templates/operations/other-ops.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Contracts | Operations{% endblock %}
+{% block title %}Other Operations | Operations{% endblock %}
 {% block content %}
     
     <section class="">
@@ -13,13 +13,13 @@
                         <div class="header">
                             <div class="row">
                                 <div class="col-sm-9">
-                                    <h2>Manage Contracts</h2>
+                                    <h2>Manage Other Operations</h2>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-right">
-                                        <a href="/admin/operations/contract/add" 
+                                        <a href="/admin/operations/otheroperationadd" 
                                             class="btn btn-sm bg-cyan waves-effect">
-                                            Add Contract
+                                            Add Other Operation
                                         </a>
                                     </div>
                                 </div>
@@ -38,21 +38,21 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for contract in contracts %}
+                                    {% for other_op in other_ops %}
                                         <tr>
-                                            <td>{{ contract.client }}</td>
-                                            <td>{{ contract.submission_date }}</td>
-                                            <td>{{ contract.employer }}</td>
+                                            <td>{{ other_op.client }}</td>
+                                            <td>{{ other_op.submission_date }}</td>
+                                            <td>{{ other_op.employer }}</td>
                                             <td>
-                                                {% if contract.client.vetting.status == 0 %}
+                                                {% if other_op.client.vetting.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif contract.client.vetting.status == 1 %}
+                                                {% elif other_op.client.vetting.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif contract.client.vetting.status == 2 %}
+                                                {% elif other_op.client.vetting.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif contract.client.vetting.status == 3 %}
+                                                {% elif other_op.client.vetting.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif contract.client.vetting.status == 4 %}
+                                                {% elif other_op.client.vetting.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
@@ -60,30 +60,30 @@
                                             </td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
-                                                    data-toggle="modal" data-target="#ViewContractModal-{{ contract.id }}">
+                                                    data-toggle="modal" data-target="#ViewOther OperationModal-{{ other_op.id }}">
                                                     <i class="material-icons">visibility</i>
                                                 </button>
-                                                <div class="modal fade" id="ViewContractModal-{{ contract.id }}" role="dialog" data-backdrop="static">
+                                                <div class="modal fade" id="ViewOther OperationModal-{{ other_op.id }}" role="dialog" data-backdrop="static">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
                                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                                <h4 class="modal-title">Contract Details</h4>
+                                                                <h4 class="modal-title">Other Operation Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Contract File</h5>
-                                                                {% if contract.document %}
-                                                                    <a href="/media/{{ contract.document }}" target="_blank">
+                                                                <h5>Other Operation File</h5>
+                                                                {% if other_op.document %}
+                                                                    <a href="/media/{{ other_op.document }}" target="_blank">
                                                                         File
                                                                     </a>
                                                                 {% else %}
-                                                                    <i>No Contract File Attatched</i>
+                                                                    <i>No Other Operation File Attatched</i>
                                                                 {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="/admin/operations/contract/{{ contract.id }}/change"
+                                                                <a href="/admin/operations/otheroperation{{ other_op.id }}/change"
                                                                     class="btn btn-sm btn-success">Edit</a>
-                                                                <a href="/admin/operations/contract/{{ contract.id }}/delete"
+                                                                <a href="/admin/operations/otheroperation{{ other_op.id }}/delete"
                                                                     class="btn btn-sm btn-danger">Delete</a>
                                                             </div>
                                                         </div>
@@ -103,5 +103,5 @@
     </section>
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/pages/tables/contracts.js' %}" ></script>
+    <script src="{% static 'js/pages/tables/other-ops.js' %}" ></script>
 {% endblock js %}
