Fixed Some Error

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -115,6 +115,10 @@
                                                                                     {% endfor %}
                                                                                 </div>
                                                                             </div>
+                                                                            {% if forloop.counter|divisibleby:"4" %}
+                                                                                    </div>
+                                                                                <div class="row bs-wizard" style="border-bottom:0;">
+                                                                            {% endif %}
                                                                         {% endfor %}
                                                                         
                                                                     </div>
