--- a/templates/clients.html
+++ b/templates/clients.html
@@ -107,17 +107,20 @@
                                                                                 <a href="#" class="bs-wizard-dot"></a>
                                                                                 <div class="bs-wizard-info text-center">
                                                                                     {{ stage.description}}<br>
-                                                                                    {% define "" as complete %}
                                                                                     {% for stg in client.stages.all %}
                                                                                         {% if stg == stage %}
                                                                                             {% define "True" as complete %}
                                                                                             <span class="badge badge-pill bg-green" style="padding: 5px;">Complete</span>
                                                                                         {% endif %}
+                                                                                        {% if forloop.counter == client.stages.all.count %}
+                                                                                            {% if complete %}
+                                                                                            
+                                                                                            {% else %}
+                                                                                                <span class="badge badge-pill bg-grey" style="padding: 5px;">Pending</span>
+                                                                                            {% endif %}
+                                                                                        {% endif %}
                                                                                     {% endfor %}
-                                                                                    {% if complete %}
-                                                                                    {% else %}
-                                                                                        <span class="badge badge-pill bg-grey" style="padding: 5px;">Pending</span>
-                                                                                    {% endif %}
+                                                                                    
                                                                                 </div>
                                                                             </div>
                                                                             {% if forloop.counter|divisibleby:"4" %}
