Finished Some Processes

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -172,7 +172,7 @@
                                                                                 <img src="/media/{{ client.photo.passport }}"  
                                                                                 style="width: 200px; height: 200px; border: #ccc solid 3px; margin-bottom: 50px;"/>
                                                                             {% else %}
-                                                                                <img src="{% static 'images/user.png' %}"  
+                                                                                <img src="{% static 'images/user.jpg' %}"  
                                                                                     style="width: 200px; height: 200px; border: #ccc solid 3px; margin-bottom: 50px;"/>
                                                                             {% endif %}
                                                                             
