--- a/templates/cv.html
+++ b/templates/cv.html
@@ -194,7 +194,7 @@
 								<!-- End Personal Information Details -->
 								<!-- Skills #Start# These are the section headings -->
 								<div class="col-md-6">
-									<h4><strong>Skills and Experience / </strong></h4> 
+									<h4><strong>Skills and Experience</strong></h4> 
 								</div>
 								<div class="col-md-4 pull-right">
 									<h4 direction="rtl">مهارات وخبرات</h4> 
@@ -253,7 +253,7 @@
 								{% if client.passport %}
 									<img src="/media/{{ client.passport.document }}" style="width:320px; height:500px;" />
 								{% else %}
-									<img src="{% static 'images/passport_preview.jpg' %}" style="width:320px; height:500px;" />
+									<img src="{% static 'images/passport.jpg' %}" style="width:320px; height:500px;" />
 								{% endif %}
 								<div class="form-line">
 									<center><h6>Applicant Contact Number</h6></center>
