--- a/templates/operations/clearances.html
+++ b/templates/operations/clearances.html
@@ -74,6 +74,7 @@
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ clearance.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewClearanceModal-{{ clearance.id }}">
