--- a/templates/base.html
+++ b/templates/base.html
@@ -157,7 +157,7 @@
                 <!-- User Info -->
                 <div class="user-info">
                     <div class="image">
-                        <img src="{% static 'images/user.png' %}" width="48" height="48" alt="User" />
+                        <img src="{% static 'images/user.jpg' %}" width="48" height="48" alt="User" />
                     </div>
                     <div class="info-container">
                         <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username}}</div>
