--- a/templates/files/client-files.html
+++ b/templates/files/client-files.html
@@ -30,9 +30,7 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
-                                        <th>Status</th>
+                                        <th>Title</th>
                                         <th>Created</th>
                                         <th>Actions</th>
                                     </tr>
@@ -41,29 +39,14 @@
                                     {% for file in files %}
                                         <tr>
                                             <td>{{ file.client }}</td>
-                                            <td>{{ file.submission_date }}</td>
-                                            <td>{{ file.employer }}</td>
-                                            <td>
-                                                {% if file.client.vetting.status == 0 %}
-                                                    <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif file.client.vetting.status == 1 %}
-                                                    <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif file.client.vetting.status == 2 %}
-                                                    <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif file.client.vetting.status == 3 %}
-                                                    <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif file.client.vetting.status == 4 %}
-                                                    <span class="badge badge-pill bg-green">Passed</span>
-                                                {% else %}
-                                                    <span class="badge badge-pill bg-red">Failed</span>
-                                                {% endif %}
-                                            </td>
+                                            <td>{{ file.title }}</td>
+                                            <td>{{ file.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
-                                                    data-toggle="modal" data-target="#ViewClient FileModal-{{ file.id }}">
+                                                    data-toggle="modal" data-target="#ViewClientFileModal-{{ file.id }}">
                                                     <i class="material-icons">visibility</i>
                                                 </button>
-                                                <div class="modal fade" id="ViewClient FileModal-{{ file.id }}" role="dialog" data-backdrop="static">
+                                                <div class="modal fade" id="ViewClientFileModal-{{ file.id }}" role="dialog" data-backdrop="static">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
@@ -71,6 +54,9 @@
                                                                 <h4 class="modal-title">Client File Details</h4>
                                                             </div>
                                                             <div class="modal-body">
+                                                                <h5>Description</h5>
+                                                                <p>{{ file.description }}</p>
+                                                                <hr>
                                                                 <h5>Client File File</h5>
                                                                 {% if file.document %}
                                                                     <a href="/media/{{ file.document }}" target="_blank">
