--- a/templates/operations/contracts.html
+++ b/templates/operations/contracts.html
@@ -44,20 +44,21 @@
                                             <td>{{ contract.submission_date }}</td>
                                             <td>{{ contract.employer }}</td>
                                             <td>
-                                                {% if contract.client.vetting.status == 0 %}
+                                                {% if contract.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif contract.client.vetting.status == 1 %}
+                                                {% elif contract.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif contract.client.vetting.status == 2 %}
+                                                {% elif contract.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif contract.client.vetting.status == 3 %}
+                                                {% elif contract.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif contract.client.vetting.status == 4 %}
+                                                {% elif contract.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ contract.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewContractModal-{{ contract.id }}">
