--- a/templates/operations/interpols.html
+++ b/templates/operations/interpols.html
@@ -31,7 +31,7 @@
                                     <tr>
                                         <th>Client</th>
                                         <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Clearance Date</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -42,22 +42,23 @@
                                         <tr>
                                             <td>{{ interpol.client }}</td>
                                             <td>{{ interpol.submission_date }}</td>
-                                            <td>{{ interpol.employer }}</td>
+                                            <td>{{ interpol.clearance_date }}</td>
                                             <td>
-                                                {% if interpol.client.vetting.status == 0 %}
+                                                {% if interpol.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif interpol.client.vetting.status == 1 %}
+                                                {% elif interpol.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif interpol.client.vetting.status == 2 %}
+                                                {% elif interpol.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif interpol.client.vetting.status == 3 %}
+                                                {% elif interpol.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif interpol.client.vetting.status == 4 %}
+                                                {% elif interpol.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ interpol.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewInterpolModal-{{ interpol.id }}">
