--- a/templates/operations/interviews.html
+++ b/templates/operations/interviews.html
@@ -30,8 +30,9 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Nationality</th>
+                                        <th>Date Of Birth</th>
+                                        <th>Age</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +42,25 @@
                                     {% for interview in interviews %}
                                         <tr>
                                             <td>{{ interview.client }}</td>
-                                            <td>{{ interview.submission_date }}</td>
-                                            <td>{{ interview.employer }}</td>
+                                            <td>{{ interview.nationality }}</td>
+                                            <td>{{ interview.date_ob }}</td>
+                                            <td>{{ interview.age }}</td>
                                             <td>
-                                                {% if interview.client.vetting.status == 0 %}
+                                                {% if interview.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif interview.client.vetting.status == 1 %}
+                                                {% elif interview.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif interview.client.vetting.status == 2 %}
+                                                {% elif interview.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif interview.client.vetting.status == 3 %}
+                                                {% elif interview.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif interview.client.vetting.status == 4 %}
+                                                {% elif interview.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ interview.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewInterviewModal-{{ interview.id }}">
@@ -71,14 +74,64 @@
                                                                 <h4 class="modal-title">Interview Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Interview File</h5>
-                                                                {% if interview.document %}
-                                                                    <a href="/media/{{ interview.document }}" target="_blank">
-                                                                        File
-                                                                    </a>
-                                                                {% else %}
-                                                                    <i>No Interview File Attatched</i>
-                                                                {% endif %}
+                                                                <div class="row">
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Religion</h6>
+                                                                        <p>{{ interview.religion }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Place Of Birth</h6>
+                                                                        <p>{{ interview.place_ob }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Married</h6>
+                                                                        <p>
+                                                                            {% if interview.married %}
+                                                                                Yes
+                                                                            {% else %}
+                                                                                No
+                                                                            {% endif %}
+                                                                        </p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Spouse Name</h6>
+                                                                        <p>{{ interview.spouse_name }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Spouse Contact</h6>
+                                                                        <p>{{ interview.spouse_contact }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Number Of Children</h6>
+                                                                        <p>{{ interview.num_children }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Home Town</h6>
+                                                                        <p>{{ interview.home_town }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Previous Job</h6>
+                                                                        <p>{{ interview.prev_job }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Previous Empoloyer</h6>
+                                                                        <p>{{ interview.prev_employer }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Description</h6>
+                                                                        <p>{{ interview.description }}</p>
+                                                                    </div>
+                                                                    <div class="col-sm-4">
+                                                                        <h5>Interview File</h5>
+                                                                        {% if interview.document %}
+                                                                            <a href="/media/{{ interview.document }}" target="_blank">
+                                                                                File
+                                                                            </a>
+                                                                        {% else %}
+                                                                            <i>No Interview File Attatched</i>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <a href="/admin/operations/interview/{{ interview.id }}/change"
