--- a/templates/operations/medicals.html
+++ b/templates/operations/medicals.html
@@ -30,8 +30,7 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Medical Type</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +40,31 @@
                                     {% for medical in medicals %}
                                         <tr>
                                             <td>{{ medical.client }}</td>
-                                            <td>{{ medical.submission_date }}</td>
-                                            <td>{{ medical.employer }}</td>
                                             <td>
-                                                {% if medical.client.vetting.status == 0 %}
+                                                {% if medical.medical_type == 0 %}
+                                                    Pre-Medical
+                                                {% elif medical.medical_type == 1 %}
+                                                    Medical
+                                                {% else %}
+                                                    Others
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if medical.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif medical.client.vetting.status == 1 %}
+                                                {% elif medical.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif medical.client.vetting.status == 2 %}
+                                                {% elif medical.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif medical.client.vetting.status == 3 %}
+                                                {% elif medical.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif medical.client.vetting.status == 4 %}
+                                                {% elif medical.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ medical.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewMedicalModal-{{ medical.id }}">
