--- a/templates/operations/other-ops.html
+++ b/templates/operations/other-ops.html
@@ -30,8 +30,7 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Item</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,29 +40,29 @@
                                     {% for other_op in other_ops %}
                                         <tr>
                                             <td>{{ other_op.client }}</td>
-                                            <td>{{ other_op.submission_date }}</td>
-                                            <td>{{ other_op.employer }}</td>
+                                            <td>{{ other_op.item }}</td>
                                             <td>
-                                                {% if other_op.client.vetting.status == 0 %}
+                                                {% if other_op.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif other_op.client.vetting.status == 1 %}
+                                                {% elif other_op.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif other_op.client.vetting.status == 2 %}
+                                                {% elif other_op.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif other_op.client.vetting.status == 3 %}
+                                                {% elif other_op.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif other_op.client.vetting.status == 4 %}
+                                                {% elif other_op.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ other_op.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
-                                                    data-toggle="modal" data-target="#ViewOther OperationModal-{{ other_op.id }}">
+                                                    data-toggle="modal" data-target="#ViewOtherOperationModal-{{ other_op.id }}">
                                                     <i class="material-icons">visibility</i>
                                                 </button>
-                                                <div class="modal fade" id="ViewOther OperationModal-{{ other_op.id }}" role="dialog" data-backdrop="static">
+                                                <div class="modal fade" id="ViewOtherOperationModal-{{ other_op.id }}" role="dialog" data-backdrop="static">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
