--- a/templates/operations/tickets.html
+++ b/templates/operations/tickets.html
@@ -30,8 +30,10 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Ticket Number</th>
+                                        <th>Airline</th>
+                                        <th>Issue Date</th>
+                                        <th>Departure Date</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +43,26 @@
                                     {% for ticket in tickets %}
                                         <tr>
                                             <td>{{ ticket.client }}</td>
-                                            <td>{{ ticket.submission_date }}</td>
-                                            <td>{{ ticket.employer }}</td>
+                                            <td>{{ ticket.ticket_no }}</td>
+                                            <td>{{ ticket.airline }}</td>
+                                            <td>{{ ticket.issue_date }}</td>
+                                            <td>{{ ticket.departure_date }}</td>
                                             <td>
-                                                {% if ticket.client.vetting.status == 0 %}
+                                                {% if ticket.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif ticket.client.vetting.status == 1 %}
+                                                {% elif ticket.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif ticket.client.vetting.status == 2 %}
+                                                {% elif ticket.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif ticket.client.vetting.status == 3 %}
+                                                {% elif ticket.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif ticket.client.vetting.status == 4 %}
+                                                {% elif ticket.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ ticket.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewTicketModal-{{ ticket.id }}">
@@ -71,14 +76,30 @@
                                                                 <h4 class="modal-title">Ticket Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Ticket File</h5>
-                                                                {% if ticket.document %}
-                                                                    <a href="/media/{{ ticket.document }}" target="_blank">
-                                                                        File
-                                                                    </a>
-                                                                {% else %}
-                                                                    <i>No Ticket File Attatched</i>
-                                                                {% endif %}
+                                                                <div class="row">
+                                                                    <div class="col-xs-4">
+                                                                        <h6>Agent</h6>
+                                                                        <p>{{ ticket.agent }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-4">
+                                                                        <h6>Check In</h6>
+                                                                        <p>{{ ticket.checkin }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-4">
+                                                                        <h6>Arrival Date</h6>
+                                                                        <p>{{ ticket.arrival_date }}</p>
+                                                                    </div>
+                                                                    <div class="col-sm-6">
+                                                                        <h5>Ticket File</h5>
+                                                                        {% if ticket.document %}
+                                                                            <a href="/media/{{ ticket.document }}" target="_blank">
+                                                                                File
+                                                                            </a>
+                                                                        {% else %}
+                                                                            <i>No Ticket File Attatched</i>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <a href="/admin/operations/ticket/{{ ticket.id }}/change"
