--- a/templates/operations/vetting/album.html
+++ b/templates/operations/vetting/album.html
@@ -38,15 +38,15 @@
                                             <td>{{ vetting.submission_date }}</td>
                                             <td>{{ vetting.employer }}</td>
                                             <td>
-                                                {% if vetting.client.vetting.status == 0 %}
+                                                {% if vetting.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif vetting.client.vetting.status == 1 %}
+                                                {% elif vetting.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif vetting.client.vetting.status == 2 %}
+                                                {% elif vetting.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif vetting.client.vetting.status == 3 %}
+                                                {% elif vetting.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif vetting.client.vetting.status == 4 %}
+                                                {% elif vetting.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
@@ -54,10 +54,10 @@
                                             </td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
-                                                    data-toggle="modal" data-target="#ViewVetting AlbumModal-{{ vetting.id }}">
+                                                    data-toggle="modal" data-target="#ViewVettingAlbumModal-{{ vetting.id }}">
                                                     <i class="material-icons">visibility</i>
                                                 </button>
-                                                <div class="modal fade" id="ViewVetting AlbumModal-{{ vetting.id }}" role="dialog" data-backdrop="static">
+                                                <div class="modal fade" id="ViewVettingAlbumModal-{{ vetting.id }}" role="dialog" data-backdrop="static">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
