--- a/templates/operations/vetting/list.html
+++ b/templates/operations/vetting/list.html
@@ -30,8 +30,13 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Job</th>
+                                        <th>DISO</th>
+                                        <th>GISO</th>
+                                        <th>Training</th>
+                                        <th>Ministry</th>
+                                        <th>Musaned</th>
+                                        <th>Waqala</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +46,65 @@
                                     {% for vetting in vettings %}
                                         <tr>
                                             <td>{{ vetting.client }}</td>
-                                            <td>{{ vetting.submission_date }}</td>
-                                            <td>{{ vetting.employer }}</td>
+                                            <td>{{ vetting.client.job }}</td>
                                             <td>
-                                                {% if vetting.client.vetting.status == 0 %}
+                                                {% if vetting.diso %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif vetting.client.vetting.status == 1 %}
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.giso %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.training %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.ministry %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.musaned %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.waqala %}
+                                                    <span class="badge badge-pill bg-green">Approved</span>
+                                                {% else %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {% if vetting.status == 0 %}
+                                                    <span class="badge badge-pill badge-primary">Pending</span>
+                                                {% elif vetting.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif vetting.client.vetting.status == 2 %}
+                                                {% elif vetting.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif vetting.client.vetting.status == 3 %}
+                                                {% elif vetting.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif vetting.client.vetting.status == 4 %}
+                                                {% elif vetting.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ vetting.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewVettingModal-{{ vetting.id }}">
@@ -71,14 +118,46 @@
                                                                 <h4 class="modal-title">Vetting Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Vetting File</h5>
-                                                                {% if vetting.document %}
-                                                                    <a href="/media/{{ vetting.document }}" target="_blank">
-                                                                        File
-                                                                    </a>
-                                                                {% else %}
-                                                                    <i>No Vetting File Attatched</i>
-                                                                {% endif %}
+                                                                <div class="row">
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Destination</h6>
+                                                                        <p>{{ vetting.destination }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Empoloyer</h6>
+                                                                        <p>{{ vetting.employer }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>District</h6>
+                                                                        <p>{{ vetting.district }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>County</h6>
+                                                                        <p>{{ vetting.county }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Sub-County/Town</h6>
+                                                                        <p>{{ vetting.subcounty }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Parish</h6>
+                                                                        <p>{{ vetting.parish }}</p>
+                                                                    </div>
+                                                                    <div class="col-xs-3">
+                                                                        <h6>Village</h6>
+                                                                        <p>{{ vetting.village }}</p>
+                                                                    </div>
+                                                                    <div class="col-sm-4">
+                                                                        <h5>Vetting File</h5>
+                                                                        {% if vetting.document %}
+                                                                            <a href="/media/{{ vetting.document }}" target="_blank">
+                                                                                File
+                                                                            </a>
+                                                                        {% else %}
+                                                                            <i>No Vetting File Attatched</i>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <a href="/admin/operations/vetting/{{ vetting.id }}/change"
