--- a/templates/operations/visas.html
+++ b/templates/operations/visas.html
@@ -30,8 +30,9 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Visa Number</th>
+                                        <th>Issue Date</th>
+                                        <th>Validity</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +42,25 @@
                                     {% for visa in visas %}
                                         <tr>
                                             <td>{{ visa.client }}</td>
-                                            <td>{{ visa.submission_date }}</td>
-                                            <td>{{ visa.employer }}</td>
+                                            <td>{{ visa.visa_no }}</td>
+                                            <td>{{ visa.issue_date }}</td>
+                                            <td>{{ visa.validity }}</td>
                                             <td>
-                                                {% if visa.client.vetting.status == 0 %}
+                                                {% if visa.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif visa.client.vetting.status == 1 %}
+                                                {% elif visa.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif visa.client.vetting.status == 2 %}
+                                                {% elif visa.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif visa.client.vetting.status == 3 %}
+                                                {% elif visa.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif visa.client.vetting.status == 4 %}
+                                                {% elif visa.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ visa.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewVisaModal-{{ visa.id }}">
@@ -71,14 +74,22 @@
                                                                 <h4 class="modal-title">Visa Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Visa File</h5>
-                                                                {% if visa.document %}
-                                                                    <a href="/media/{{ visa.document }}" target="_blank">
-                                                                        File
-                                                                    </a>
-                                                                {% else %}
-                                                                    <i>No Visa File Attatched</i>
-                                                                {% endif %}
+                                                                <div class="row">
+                                                                    <div class="col-sm-4">
+                                                                        <h6>Agent</h6>
+                                                                        <p>{{ visa.agent }}</p>
+                                                                    </div>
+                                                                    <div class="col-sm-6">
+                                                                        <h5>Visa File</h5>
+                                                                        {% if visa.document %}
+                                                                            <a href="/media/{{ visa.document }}" target="_blank">
+                                                                                File
+                                                                            </a>
+                                                                        {% else %}
+                                                                            <i>No Visa File Attatched</i>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <a href="/admin/operations/visa/{{ visa.id }}/change"
