--- a/templates/others/recruitments.html
+++ b/templates/others/recruitments.html
@@ -30,8 +30,10 @@
                                 <thead>
                                     <tr>
                                         <th>Client</th>
-                                        <th>Submission Date</th>
+                                        <th>Job</th>
                                         <th>Empoloyer</th>
+                                        <th>Destination</th>
+                                        <th>Partner</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -41,23 +43,26 @@
                                     {% for recruitment in recruitments %}
                                         <tr>
                                             <td>{{ recruitment.client }}</td>
-                                            <td>{{ recruitment.submission_date }}</td>
+                                            <td>{{ recruitment.job }}</td>
                                             <td>{{ recruitment.employer }}</td>
+                                            <td>{{ recruitment.destination }}</td>
+                                            <td>{{ recruitment.partner }}</td>
                                             <td>
-                                                {% if recruitment.client.vetting.status == 0 %}
+                                                {% if recruitment.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif recruitment.client.vetting.status == 1 %}
+                                                {% elif recruitment.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif recruitment.client.vetting.status == 2 %}
+                                                {% elif recruitment.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif recruitment.client.vetting.status == 3 %}
+                                                {% elif recruitment.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif recruitment.client.vetting.status == 4 %}
+                                                {% elif recruitment.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ recruitment.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewRecruitmentModal-{{ recruitment.id }}">
