--- a/templates/others/tasks.html
+++ b/templates/others/tasks.html
@@ -29,9 +29,8 @@
                             <table class="table table-bordered table-striped table-hover dataTable js-exportable">
                                 <thead>
                                     <tr>
-                                        <th>Client</th>
-                                        <th>Submission Date</th>
-                                        <th>Empoloyer</th>
+                                        <th>Receiver</th>
+                                        <th>Task</th>
                                         <th>Status</th>
                                         <th>Created</th>
                                         <th>Actions</th>
@@ -40,45 +39,37 @@
                                 <tbody>
                                     {% for task in tasks %}
                                         <tr>
-                                            <td>{{ task.client }}</td>
-                                            <td>{{ task.submission_date }}</td>
-                                            <td>{{ task.employer }}</td>
+                                            <td>{{ task.receiver }}</td>
+                                            <td>{{ task.task }}</td>
                                             <td>
-                                                {% if task.client.vetting.status == 0 %}
+                                                {% if task.status == 0 %}
                                                     <span class="badge badge-pill badge-primary">Pending</span>
-                                                {% elif task.client.vetting.status == 1 %}
+                                                {% elif task.status == 1 %}
                                                     <span class="badge badge-pill bg-green">Active</span>
-                                                {% elif task.client.vetting.status == 2 %}
+                                                {% elif task.status == 2 %}
                                                     <span class="badge badge-pill bg-orange">Done</span>
-                                                {% elif task.client.vetting.status == 3 %}
+                                                {% elif task.status == 3 %}
                                                     <span class="badge badge-pill bg-red">Cancelled</span>
-                                                {% elif task.client.vetting.status == 4 %}
+                                                {% elif task.status == 4 %}
                                                     <span class="badge badge-pill bg-green">Passed</span>
                                                 {% else %}
                                                     <span class="badge badge-pill bg-red">Failed</span>
                                                 {% endif %}
                                             </td>
+                                            <td>{{ task.created }}</td>
                                             <td>
                                                 <button class="btn btn-xs bg-deep-orange waves-effect"
                                                     data-toggle="modal" data-target="#ViewTaskModal-{{ task.id }}">
                                                     <i class="material-icons">visibility</i>
                                                 </button>
                                                 <div class="modal fade" id="ViewTaskModal-{{ task.id }}" role="dialog" data-backdrop="static">
-                                                    <div class="modal-dialog">
+                                                    <div class="modal-dialog modal-sm">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
                                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                                                 <h4 class="modal-title">Task Details</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <h5>Task File</h5>
-                                                                {% if task.document %}
-                                                                    <a href="/media/{{ task.document }}" target="_blank">
-                                                                        File
-                                                                    </a>
-                                                                {% else %}
-                                                                    <i>No Task File Attatched</i>
-                                                                {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <a href="/admin/others/task/{{ task.id }}/change"
